--- a/climatic/styles.css
+++ b/climatic/styles.css
@@ -56,7 +56,7 @@ nav ul li a {
 .hero {
     text-align: center;
     padding: 120px 20px 80px;
-    background: #3B7D6E; /* Verde Oscuro */
+    background: #4c7e72; /* Verde Oscuro */
     color: white;
 }
 
@@ -74,8 +74,8 @@ nav ul li a {
     padding: 60px 20px;
     text-align: center;
     background: #E8EBF0; /* Gris Claro */
-    margin: 20px 0;
     border-radius: 10px;
+    margin: 0 70px;
 }
 
 /* Estilos para la sección de funcionalidades */
@@ -252,7 +252,7 @@ p {
 footer {
     text-align: center;
     padding: 20px;
-    background: #2A6D6A; /* Teal */
+    background: #548380; /* Teal */
     color: white;
 }
 
@@ -343,4 +343,19 @@ footer {
     .slider-container {
         width: 100%;
     }
+}
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+.social-icon i {
+    font-size: 40px; /* Aumentado el tamaño de los íconos */
+    color: white;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+.social-icon:hover i {
+    transform: scale(1.2);
+    color: #EAC4B1; /* Color durazno al pasar el mouse */
 }
